--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -18,11 +18,20 @@ input {
   @apply text-darkGrey;
 }
 button {
-  @apply bg-orange font-semibold px-4 py-2 text-white rounded-lg mx-auto my-2;
+  @apply bg-purple font-semibold px-4 py-2 text-white rounded-lg mx-auto my-2 w-[9rem];
 }
 .headText {
   @apply text-white font-semibold;
 }
 .taskBox {
   @apply bg-darkGrey rounded-md p-4;
+}
+.sidediv {
+  @apply bg-darkGrey h-[18.5rem] m-1 rounded-md w-[200px] flex-shrink-0 p-4 text-center z-10;
+}
+.divButton {
+  @apply absolute bottom-0 left-0 right-0 text-sm;
+}
+.divList {
+  @apply headText text-sm rounded-sm bg-lightGrey  hover:cursor-pointer p-1 m-1 w-[10rem];
 }
